--- a/templates/api/docker-compose.yml
+++ b/templates/api/docker-compose.yml
@@ -38,3 +38,25 @@ services:
       - ./users.acl:/etc/redis/users.acl
     ports:
       - "6379:6379"
+
+  rabbitmq:
+    container_name: rabbitmq
+    image: heidiks/rabbitmq-delayed-message-exchange
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
+    ports:
+      - "5775:5775/udp"
+      - "6831:6831/udp"
+      - "6832:6832/udp"
+      - "5778:5778"
+      - "9411:9411"
+      - "4317:4317" # Communication via application.
+      - "16686:16686"
+      - "14268:14268"
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
