--- a/templates/api/src/Supreme.Api/Supreme.Api.csproj
+++ b/templates/api/src/Supreme.Api/Supreme.Api.csproj
@@ -26,4 +26,9 @@
     <ProjectReference Include="..\Supreme.Infrastructure\Supreme.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="appsettings.json.tmpl">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
