--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -12,12 +12,12 @@ env:
 jobs:
   deploy:
     name: 'Deploy NuGet Package'
-    runs-on: 'ubuntu-latest'
+    runs-on: 'windows-latest'
     steps:
     - name: 'Checkout source'
       uses: actions/checkout@v2
 
-    - name: 'Install .NET Core 6 SDK'
+    - name: 'Install .NET Core 7 SDK'
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 7.0.x
