--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -8,6 +8,7 @@ on:
 env:
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
   NUGET_SOURCE_URL: 'https://api.nuget.org/v3/index.json'
+  PROJECT_PATH: 'SupremeDotnetApiTemplate.csproj'
 
 jobs:
   deploy:
@@ -23,17 +24,17 @@ jobs:
         dotnet-version: 7.0.x
 
     - name: 'Restore packages'
-      run: dotnet restore
+      run: dotnet restore ${{ env.PROJECT_PATH }}
 
     - name: 'Build project'
-      run: dotnet build --no-restore --configuration Release
+      run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
 
     - name: 'Get version'
       id: version
       uses: battila7/get-version-action@v2
 
     - name: 'Pack NuGet Package'
-      run: dotnet pack --no-restore --no-build --cofiguration Release  --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
+      run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --cofiguration Release  --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
 
     - name: 'Publish NuGet Package'
       run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg -s ${{ env.NUGET_SOURCE_URL }} --skip-duplicate -p:PackageVersion=${{ steps.version.outputs.version-without-v }} --api-key ${{ secrets.NUGET_AUTH_TOKEN }}
