--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -34,7 +34,7 @@ jobs:
       uses: battila7/get-version-action@v2
 
     - name: 'Pack NuGet Package'
-      run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --cofiguration Release  --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
+      run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release  --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
 
     - name: 'Publish NuGet Package'
       run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg -s ${{ env.NUGET_SOURCE_URL }} --skip-duplicate -p:PackageVersion=${{ steps.version.outputs.version-without-v }} --api-key ${{ secrets.NUGET_AUTH_TOKEN }}
