--- a/templates/api/src/Supreme.Api/appsettings.json
+++ b/templates/api/src/Supreme.Api/appsettings.json
@@ -24,6 +24,7 @@
       "WithThreadId"
     ]
   },
+  //#if (enable-outbox-pattern)
   "RabbitMqSettings": {
     "Host": "localhost",
     "Port": 5672,
@@ -31,6 +32,7 @@
     "Username": "guest",
     "Password": "guest"
   },
+  //#endif
   "ApplicationSettings": {
   },
   "RedisSettings": {
@@ -40,7 +42,9 @@
     "User": "User",
     "Password": "Password"
   },
+  //#if (enable-open-telemetry)
   "JaegerSettings": {
     "Url": "http://localhost:4317"
   }
+  //#endif
 }
