--- a/templates/api/Directory.Build.targets
+++ b/templates/api/Directory.Build.targets
@@ -14,6 +14,7 @@
     <PackageReference Update="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
     <PackageReference Update="MediatR" Version="12.0.1" />
     <PackageReference Update="Microsoft.EntityFrameworkCore.Design" Version="7.0.5" />
+    <PackageReference Update="Microsoft.Extensions.Diagnostics.HealthChecks" Version="7.0.8" />
     <PackageReference Update="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.5"/>
     <PackageReference Update="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="4.5.0" />
     <PackageReference Update="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
