Add postgresql support. Add hostcli json to define options explicitly.

--- a/templates/api/src/Supreme.Api/appsettings.json
+++ b/templates/api/src/Supreme.Api/appsettings.json
@@ -1,6 +1,11 @@
 {
   "ConnectionStrings": {
+//#if (database == "mysql")
     "DatabaseConnection": "Server=localhost;database=Supreme;uid=root;pwd=root;Convert Zero Datetime=True;Connection Timeout=15;"
+//#endif
+//#if (database == "postgres")
+    "DatabaseConnection": "User ID=sqlsa;Password=SuperPass1;Server=localhost;Port=5432;Database=MyTest;Integrated Security=true; Pooling=true;Timeout=15"
+//#endif
   },
   "Serilog": {
     "MinimumLevel": "Information",
