--- a/templates/api/Directory.Build.targets
+++ b/templates/api/Directory.Build.targets
@@ -17,7 +17,6 @@
     <PackageReference Update="Microsoft.Extensions.Diagnostics.HealthChecks" Version="7.0.8" />
     <PackageReference Update="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.5"/>
     <PackageReference Update="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="4.5.0" />
-    <PackageReference Update="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     <PackageReference Update="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Update="Scrutor" Version="4.2.2"/>
     <PackageReference Update="Serilog" Version="2.12.0" />
@@ -29,14 +28,26 @@
     <PackageReference Update="Moq" Version="4.18.4" />
     <PackageReference Update="xunit" Version="2.4.2" />
     <PackageReference Update="xunit.runner.visualstudio" Version="2.4.5" />
+  </ItemGroup>
 
+  <ItemGroup Condition="'$(database)' == 'mysql'">
+    <PackageReference Update="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(database)' == 'postgres'">
+    <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
   </ItemGroup>
 
   <ItemGroup Condition="$(enable-outbox-pattern)">
     <PackageReference Update="DotNetCore.CAP" Version="7.1.2" />
     <PackageReference Update="DotNetCore.CAP.RabbitMQ" Version="7.1.2" />
-    <PackageReference Update="DotNetCore.CAP.MySql" Version="7.1.2" />
     <PackageReference Update="DotNetCore.CAP.Dashboard" Version="7.1.2" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(database)' == 'mysql' And $(enable-outbox-pattern)">
+    <PackageReference Update="DotNetCore.CAP.MySql" Version="7.1.2" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(database)' == 'postgres' And $(enable-outbox-pattern)">
+    <PackageReference Update="DotNetCore.CAP.PostgreSql" Version="7.1.2" />
   </ItemGroup>
 
   <ItemGroup Condition="$(enable-open-telemetry)">
@@ -50,7 +61,6 @@
     <PackageReference Update="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.14" />
     <PackageReference Update="OpenTelemetry.Instrumentation.SqlClient" Version="1.0.0-rc9.14" />
   </ItemGroup>
-
   <ItemGroup Condition="$(enable-rate-limiting)">
     <PackageReference Update="StackExchange.Redis" Version="2.6.111" />
   </ItemGroup>
