--- a/templates/api/docker-compose.yml
+++ b/templates/api/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "5000:5000"
     depends_on:
       - redis
-      - mysql
+      - database
 //#if (enable-outbox-pattern)
       - rabbitmq
 //#endif
@@ -16,7 +16,8 @@ services:
       - jaeger
 //#endif
 
-  mysql:
+  database:
+//#if (database == "mysql")
     image: mysql:8.0
     container_name: mysql
     command: mysqld --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
@@ -27,6 +28,17 @@ services:
       - MYSQL_USER=sqlsa
       - MYSQL_PASSWORD=SuperPass1
       - MYSQL_DATABASE=Supreme
+//#endif
+//#if (database == "postgres")
+    image: postgres:latest
+    container_name: postgres
+    environment:
+      - POSTGRES_USER=sqlsa
+      - POSTGRES_PASSWORD=SuperPass1
+      - POSTGRES_DB=Supreme
+    ports:
+      - "5432:5432"
+//#endif
 
   redis:
     image: redis
