[#19] Support PostgreSql for integration testing

--- a/templates/api/test/Supreme.Application.Tests/Supreme.Application.Tests.csproj
+++ b/templates/api/test/Supreme.Application.Tests/Supreme.Application.Tests.csproj
@@ -16,6 +16,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\..\src\Supreme.Application\Supreme.Application.csproj" />
+    <ProjectReference Include="..\Belinda.Api.Tests\Belinda.Api.Tests.csproj" />
   </ItemGroup>
     
 </Project>
