--- a/templates/api/test/Supreme.Api.Tests/Supreme.Api.Tests.csproj
+++ b/templates/api/test/Supreme.Api.Tests/Supreme.Api.Tests.csproj
@@ -8,10 +8,16 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Moq" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
+    <PackageReference Include="Testcontainers" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(database)' == 'postgres'">
+    <PackageReference Include="Testcontainers.PostgreSql" />
   </ItemGroup>
   
   <ItemGroup>
