--- a/templates/api/Directory.Build.targets
+++ b/templates/api/Directory.Build.targets
@@ -27,17 +27,18 @@
     <PackageReference Update="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.11" />
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Update="Moq" Version="4.18.4" />
-    <PackageReference Update="Testcontainers" Version="3.5.0" />
+    <PackageReference Update="Testcontainers" Version="3.6.0" />
     <PackageReference Update="xunit" Version="2.4.2" />
     <PackageReference Update="xunit.runner.visualstudio" Version="2.4.5" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(database)' == 'mysql'">
     <PackageReference Update="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
+    <PackageReference Update="Testcontainers.MySql" Version="3.6.0" />
   </ItemGroup>
   <ItemGroup Condition="'$(database)' == 'postgres'">
     <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
-    <PackageReference Update="Testcontainers.PostgreSql" Version="3.5.0" />
+    <PackageReference Update="Testcontainers.PostgreSql" Version="3.6.0" />
   </ItemGroup>
 
   <ItemGroup Condition="$(enable-outbox-pattern)">
